students_add form (add value attribute to fields)

--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -13,24 +13,24 @@
         {% csrf_token %}
         <div>
             <label for="first_name">Ім'я*</label>
-            <input type="text" value="" name="first_name" id="first_name" placeholder="Введіть Ваше ім'я">
+            <input type="text" value="{{ request.POST.first_name }}" name="first_name" id="first_name" placeholder="Введіть Ваше ім'я">
             <span class="help-block">{{ errors.first_name }}</span>
         </div>
 
         <div>
             <label for="last_name">Прізвище*</label>
-            <input type="text" value="" name="last_name" id="last_name" placeholder="Введіть Ваше прізвище">
+            <input type="text" value="{{ request.POST.last_name }}" name="last_name" id="last_name" placeholder="Введіть Ваше прізвище">
             <span class="help-block">{{ errors.last_name }}</span>
         </div>
 
         <div>
             <label for="middle_name">По батькові</label>
-            <input type="text" value="" name="middle_name" id="middle_name" placeholder="Введіть Ваше по батькові">
+            <input type="text" value="{{ request.POST.middle_name }}" name="middle_name" id="middle_name" placeholder="Введіть Ваше по батькові">
         </div>
 
         <div>
             <label for="birthday">Дата народження*</label>
-            <input type="text" value="" name="birthday" id="birthday" placeholder="Наприклад: 1984-12-30">
+            <input type="text" value="{{ request.POST.birthday }}" name="birthday" id="birthday" placeholder="Наприклад: 1984-12-30">
             <span class="help-block">{{ errors.birthday }}</span>
         </div>
 
@@ -41,16 +41,18 @@
 
         <div>
             <label for="ticket">Білет</label>
-            <input type="text" value="" name="ticket" id="ticket">
+            <input type="text" value="{{ request.POST.ticket }}" name="ticket" id="ticket">
             <span class="help-block">{{ errors.ticket }}</span>
         </div>
 
         <div>
             <label for="student_group">Група*</label>
-            <select name="student_group" id="student_group">
+            <select name="student_group" id="student_group" class="form-control">
                 <option value="">Виберіть групу</option>
                 {% for group in groups %}
-                    <option value="{{ group.id }}">{{ group.title }}</option>
+                    <option value="{{ group.id }}" {% if group.id == request.POST.student_group|add:0 %}selected="1"{% endif %}>
+                        {{ group.title }}
+                    </option>
                 {% endfor %}
             </select>
             <span class="help-block">{{ errors.student_group }}</span>
@@ -58,7 +60,7 @@
 
         <div>
             <label for="notes">Додаткові нотатки</label>
-            <textarea name="notes" id="notes" class="form-control"></textarea>
+            <textarea name="notes" id="notes" class="form-control">{{ request.POST.notes }}</textarea>
         </div>
 
         <div>
