add contact_admin form

--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -63,6 +63,9 @@
                     <li role="presentation" {% if groups_url in request.path %} class="active" {% endif %}>
                         <a href="{% url "groups" %}">Групи</a>
                     </li>
+                    <li role="presentation" {% if contact_admin in request.path %} class="active" {% endif %}>
+                        <a href="{% url "contact_admin" %}">Контакт</a>
+                    </li>
                 </ul>
             </div>
         </div>
