student_edit (as_view with template)

--- a/students/templates/students/students_edit.html
+++ b/students/templates/students/students_edit.html
@@ -4,7 +4,7 @@
 
 {% block meta_title %}Редагування студента{% endblock meta_title %}
 
-{% block title %}Редагувати студента{% endblock title %}
+{% block title %}Редагування студента{% endblock title %}
 
 {% block status_message %}
     {% if rorm.errors %}
