student_edit (refactor & student_group fix)

--- a/students/templates/students/students_edit.html
+++ b/students/templates/students/students_edit.html
@@ -1,6 +1,7 @@
 {% extends "students/base.html" %}
 
 {% load static from staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block meta_title %}Редагування студента{% endblock meta_title %}
 
@@ -13,10 +14,5 @@
 {% endblock %}
 
 {% block content %}
-    <form action="{% url 'students_edit' object.id %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Зберегти" name="add_button" class="btn btn-primary">
-        <button type="submit" name="cancel_button" value="Скасувати" class="btn btn-link">Скасувати</button>
-    </form>
+    {% crispy form %}
 {% endblock content %}
