--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -1,117 +1,18 @@
 {% extends "students/base.html" %}
 
 {% load static from staticfiles %}
+{% load crispy_forms_tags %}
 
-{% block meta_title %}Додати студента{% endblock meta_title %}
+{% block meta_title %}Додавання студента{% endblock meta_title %}
 
-{% block title %}Додати студента{% endblock title %}
+{% block title %}Додавання студента{% endblock title %}
 
-<!-- Status Message -->
 {% block status_message %}
-    {% if errors %}
+    {% if rorm.errors %}
         <div class="alert alert-danger" role="alert">Будь-ласка, виправте наступні помилки:</div>
     {% endif %}
 {% endblock %}
 
-
 {% block content %}
-
-    <form action="{% url 'students_add' %}" method="post" enctype="multipart/form-data"
-          role="form" class="form-horizontal">
-
-        {% csrf_token %}
-
-        <div class="form-group {% if errors.first_name %}has-error{% endif %}">
-            <label for="first_name" class="col-sm-2 control-label">Ім'я*</label>
-            <div class="col-sm-10">
-                <input type="text" value="{{ request.POST.first_name }}"
-                       name="first_name" id="first_name" style="max-width: 300px"
-                       class="form-control" placeholder="Введіть Ваше ім'я">
-                <span class="help-block">{{ errors.first_name }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.last_name %}has-error{% endif %}">
-            <label for="last_name" class="col-sm-2 control-label">Прізвище*</label>
-            <div class="col-sm-10">
-                <input type="text" value="{{ request.POST.last_name }}"
-                       name="last_name" id="last_name" style="max-width: 300px"
-                       class="form-control" placeholder="Введіть Ваше прізвище">
-                <span class="help-block">{{ errors.last_name }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.middle_name %}has-error{% endif %}">
-            <label for="middle_name" class="col-sm-2 control-label">По батькові</label>
-            <div class="col-sm-10">
-                <input type="text" value="{{ request.POST.middle_name }}"
-                       name="middle_name" id="middle_name" style="max-width: 300px"
-                       class="form-control" placeholder="Введіть Ваше по батькові">
-                <span class="help-block">{{ errors.middle_name }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.birthday %}has-error{% endif %}">
-            <label for="birthday" class="col-sm-2 control-label">Дата народження*</label>
-            <div class="col-sm-10">
-                <input type="text" value="{{ request.POST.birthday }}"
-                       name="birthday" id="birthday" style="max-width: 300px"
-                       class="form-control" placeholder="Наприклад: 1984-12-30">
-                <span class="help-block">{{ errors.birthday }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.photo %}has-error{% endif %}">
-            <label for="photo" class="col-sm-2 control-label">Фото</label>
-            <div class="col-sm-10">
-                <input type="file" value="" name="photo" id="photo">
-                <span class="help-block">{{ errors.photo }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.ticket %}has-error{% endif %}">
-            <label for="ticket" class="col-sm-2 control-label">Білет</label>
-            <div class="col-sm-10">
-                <input type="text" value="{{ request.POST.ticket }}"
-                       name="ticket" id="ticket" style="max-width: 300px"
-                       class="form-control">
-                <span class="help-block">{{ errors.ticket }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.student_group %}has-error{% endif %}">
-            <label for="student_group" class="col-sm-2 control-label">Група*</label>
-            <div class="col-sm-10">
-                <select name="student_group" id="student_group"
-                        class="form-control" style="max-width: 300px">
-                <option value="">Виберіть групу</option>
-                {% for group in groups %}
-                    <option value="{{ group.id }}" {% if group.id == request.POST.student_group|add:0 %}selected="1"{% endif %}>
-                        {{ group.title }}
-                    </option>
-                {% endfor %}
-                </select>
-                <span class="help-block">{{ errors.student_group }}</span>
-            </div>
-        </div>
-
-        <div class="form-group {% if errors.notes %}has-error{% endif %}">
-            <label for="notes" class="col-sm-2 control-label">Додаткові нотатки</label>
-            <div class="col-sm-10">
-                <textarea name="notes" id="notes" class="form-control" style="max-width: 300px">
-                    {{ request.POST.notes }}
-                </textarea>
-                <span class="help-block">{{ errors.notes }}</span>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label"></label>
-            <div class="col-sm-10">
-                <button type="submit" name="add_button" class="btn btn-primary">Додати</button>
-                <button type="submit" name="cancel_button" class="btn btn-default">Скасувати</button>
-            </div>
-        </div>
-    </form>
-
+    {% crispy form %}
 {% endblock content %}
