StudentUpdateForm, GroupUpdateForm (with validation)

--- a/students/templates/students/groups_add.html
+++ b/students/templates/students/groups_add.html
@@ -8,7 +8,7 @@
 {% block title %}Додавання групи{% endblock title %}
 
 {% block status_message %}
-    {% if rorm.errors %}
+    {% if form.errors %}
         <div class="alert alert-danger" role="alert">Будь-ласка, виправте наступні помилки:</div>
     {% endif %}
 {% endblock %}
