--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -16,11 +16,11 @@
         <p id="journal-nav" class="text-center">
             <a href="?month={{ prev_month }}" title="Попередній Місяць">&larr;</a>
             <!-- TODO: translate month name -->
-            <strong>{{ month_verbose  }} {{ year }}</strong>
+            <strong>{{ month_verbose }} {{ year }}</strong>
             <a href="?month={{ next_month }}" title="Наступний Місяць">&rarr;</a>
         </p>
 
-        <table class="table table-hover table-striped table-bordered" id="students-journal">
+        <table class="table table-hover table-striped table-bordered table-condensed" id="students-journal">
             <thead>
                 <tr class="header">
                     <th class="num">#</th>
