--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -104,12 +104,14 @@
     </div>
     <!-- End container -->
 
+    <!-- Javascript Inclusion -->
     <!-- jQuery -->
     <!-- <script src="./js/jquery.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
     <!-- Bootstrap JS -->
     <!-- <script src="./js/bootstrap.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{% static "js/main.js" %}"></script>
+    {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
