--- a/students/static/css/main.css
+++ b/students/static/css/main.css
@@ -32,11 +32,6 @@ h1, h2, h3, h4, h5, h6 {
     color: #555555;
 }
 
-/*#th-center th {*/
-  /*text-align: center;*/
-  /*vertical-align: middle;*/
-/*}*/
-
 .table-caption {
   text-align: center;
   padding-bottom: 10px;
@@ -48,4 +43,8 @@ th.day-header {
     /*padding: 4px !important;*/
     vertical-align: middle !important;
     text-align: center;
+}
+
+#ajax-progress-indicator {
+    display: none;
 }
