group select (server side)

--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -41,8 +41,9 @@
                 <select>
                     {% block group_menu %}
                     <option value="">Усі Студенти</option>
-                    <option value="">МтМ - 21, Подоба Віталій (№ 254)</option>
-                    <option value="">МтМ - 22, Корост Андрій (№ 2123)</option>
+                    {% for group in GROUPS %}
+                        <option value="{{ group.id }}" {% if group.selected %} selected="1" {% endif %}>{{ group.title }}{% if group.leader %}, {{ group.leader }}{% endif %}</option>
+                    {% endfor %}
                     {% endblock group_menu %}
                 </select>
             </div>
