--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -109,6 +109,8 @@
     <!-- jQuery -->
     <!-- <script src="./js/jquery.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- jQuery Cookie Plugin -->
+    <script src="{% static "js/jquery.cookie.js" %}"></script>
     <!-- Bootstrap JS -->
     <!-- <script src="./js/bootstrap.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
