--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -53,7 +53,7 @@
                                 {{ forloop.counter }}
                             {% endif %}
                         </td>
-                        <td>
+                        <td class="student-box">
                             <a href="{% url "students_edit" student.id %}" title="Редагувати" target="_blank">
                                 {{ student.fullname }}
                             </a>
