--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -9,8 +9,8 @@
     <meta name="description" value="Система обліку студентів Навчального Закладу">
     <title>Сервіс обліку студентів - {% block meta_title %}{% endblock meta_title %}</title>
 
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
+    <!-- Bootstrap CSS -->
+    {#<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}">#}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -21,6 +21,7 @@
     <![endif]-->
 
     <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}">
+
     {% block extra_css %}{% endblock extra_css %}
 
 </head>
@@ -105,16 +106,31 @@
     </div>
     <!-- End container -->
 
+
     <!-- Javascript Inclusion -->
+
     <!-- jQuery -->
-    <!-- <script src="./js/jquery.min.js"></script> -->
+    {#<script src="{% static "js/jquery.min.js" %}"></script>#}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- jQuery Cookie Plugin -->
-    <script src="{% static "js/jquery.cookie.js" %}"></script>
+
+    <!-- Moment -->
+    {#<script src="{% static "js/moment.min.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+
+    <!-- jQuery Cookie -->
+    {#<script src="{% static "js/jquery.cookie.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
     <!-- Bootstrap JS -->
-    <!-- <script src="./js/bootstrap.min.js"></script> -->
+    {#<script src="{% static "js/bootstrap.min.js" %}"></script>#}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <!-- Bootstrap-datetimepicker -->
+    {#<script src="{% static "js/bootstrap-datetimepicker.min.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
     <script src="{% static "js/main.js" %}"></script>
+
     {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
