--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -48,9 +48,9 @@
 
         {% for group in groups %}
         <tr>
-            <td>{{ forloop.counter }}</td>
-            <td><a title="Редагувати" href="{% url "groups_edit" group.id %}">{{ group.title }}</a></td>
-            <td>{{ group.leader }}</td>
+            <td class="group-box">{{ forloop.counter }}</td>
+            <td class="group-box"><a title="Редагувати" href="{% url "groups_edit" group.id %}">{{ group.title }}</a></td>
+            <td class="group-box">{{ group.leader }}</td>
             <td>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
