--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -57,18 +57,18 @@
 
         {% for student in students %}
         <tr>
-            <td>{{ forloop.counter }}</td>
+            <td class="student-box">{{ forloop.counter }}</td>
 
-            <td>
+            <td class="student-box">
                 {% if student.photo %}
                     <img src="{{ student.photo.url }}" height="30" width="30" class="img-circle">
                 {% else %}
                     <img src="{% static "img/default_user.png" %}" height="30" width="30" class="img-circle">
                 {% endif %}
             </td>
-            <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.last_name }}</a></td>
-            <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.first_name }}</a></td>
-            <td>{{ student.ticket }}</td>
+            <td class="student-box"><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.last_name }}</a></td>
+            <td class="student-box"><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.first_name }}</a></td>
+            <td class="student-box">{{ student.ticket }}</td>
             <td>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
