--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -10,8 +10,8 @@
     <title>Сервіс обліку студентів - {% block meta_title %}{% endblock meta_title %}</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}">
-{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">#}
+{#    <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}">#}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -110,24 +110,24 @@
     <!-- Javascript Inclusion -->
 
     <!-- jQuery -->
-    <script src="{{ PORTAL_URL }}{% static "js/jquery.min.js" %}"></script>
-{#    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>#}
+{#    <script src="{{ PORTAL_URL }}{% static "js/jquery.min.js" %}"></script>#}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <!-- Moment -->
-    <script src="{{ PORTAL_URL }}{% static "js/moment.min.js" %}"></script>
-{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>#}
+{#    <script src="{{ PORTAL_URL }}{% static "js/moment.min.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 
     <!-- jQuery Cookie -->
-    <script src="{{ PORTAL_URL }}{% static "js/jquery.cookie.js" %}"></script>
-{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>#}
+{#    <script src="{{ PORTAL_URL }}{% static "js/jquery.cookie.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- Bootstrap JS -->
-    <script src="{{ PORTAL_URL }}{% static "js/bootstrap.min.js" %}"></script>
-{#    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>#}
+{#    <script src="{{ PORTAL_URL }}{% static "js/bootstrap.min.js" %}"></script>#}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- Bootstrap-datetimepicker -->
-    <script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>
-{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>#}
+{#    <script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
 
     <script src="{{ PORTAL_URL }}{% static "js/main.js" %}"></script>
 
