--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -110,23 +110,25 @@
     <!-- Javascript Inclusion -->
 
     <!-- jQuery -->
-{#    <script src="{{ PORTAL_URL }}{% static "js/jquery.min.js" %}"></script>#}
+    {#<script src="{{ PORTAL_URL }}{% static "js/jquery.min.js" %}"></script>#}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <!-- Moment -->
-{#    <script src="{{ PORTAL_URL }}{% static "js/moment.min.js" %}"></script>#}
+    {#<script src="{{ PORTAL_URL }}{% static "js/moment.min.js" %}"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+    {#<script src="{{ PORTAL_URL }}{% static "js/uk.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/locale/uk.js"></script>
 
     <!-- jQuery Cookie -->
-{#    <script src="{{ PORTAL_URL }}{% static "js/jquery.cookie.js" %}"></script>#}
+    {#<script src="{{ PORTAL_URL }}{% static "js/jquery.cookie.js" %}"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- Bootstrap JS -->
-{#    <script src="{{ PORTAL_URL }}{% static "js/bootstrap.min.js" %}"></script>#}
+    {#<script src="{{ PORTAL_URL }}{% static "js/bootstrap.min.js" %}"></script>#}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- Bootstrap-datetimepicker -->
-{#    <script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>#}
+    {#<script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
 
     <script src="{{ PORTAL_URL }}{% static "js/main.js" %}"></script>
