--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -10,7 +10,7 @@
     <title>Сервіс обліку студентів - {% block meta_title %}{% endblock meta_title %}</title>
 
     <!-- Bootstrap CSS -->
-{#    <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}">#}
+    {#<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}">#}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -19,6 +19,10 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Bootstrap-datetimepicker CSS -->
+    {#<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap-datetimepicker.min.css" %}">#}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
 
     <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}">
 
@@ -127,9 +131,13 @@
     {#<script src="{{ PORTAL_URL }}{% static "js/bootstrap.min.js" %}"></script>#}
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap-datetimepicker -->
+    <!-- Bootstrap-datetimepicker JS -->
     {#<script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+    <!-- jQuery form -->
+    {#<script src="{{ PORTAL_URL }}{% static "js/jquery.form.min.js" %}"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 
     <script src="{{ PORTAL_URL }}{% static "js/main.js" %}"></script>
 
