student add/edit modal (simple)

--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -98,6 +98,7 @@
             </div>
         </div>
         <!-- End Main Page Content -->
+
         <br>
         <!-- Start footer -->
         <div class="row" id="footer">
@@ -109,6 +110,26 @@
 
     </div>
     <!-- End container -->
+
+    <!-- Start Modal student add/edit -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="MyModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body"><p>One fine body&hellip;</p></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Modal student add/edit -->
 
 
     <!-- Javascript Inclusion -->
