--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -119,13 +119,10 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" id="MyModalLabel">Modal title</h4>
+                    <h4 class="modal-title" id="MyModalLabel"></h4>
                 </div>
-                <div class="modal-body"><p>One fine body&hellip;</p></div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer"></div>
             </div>
         </div>
     </div>
